--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "http": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.7.3",
-    "node-cron": "^3.0.3"
+    "node-cron": "^3.0.3",
+    "winston": "^3.17.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.14.0",
