--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "name": "server",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./src/index.js",
   "type": "module",
   "scripts": {
-    "start": "node ./src/server.mjs",
-    "dev": "nodemon ./src/server.mjs"
+    "build": "tsc",
+    "start": "node --es-module-specifier-resolution=node ./dist",
+    "dev": "node --loader ts-node/esm ./src/index.ts"
   },
   "keywords": [],
   "author": "",
@@ -24,10 +25,18 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.7.3",
     "node-cron": "^3.0.3",
+    "ts-node": "^10.9.2",
+    "tsconfig-paths": "^4.2.0",
     "winston": "^3.17.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.14.0",
+    "@types/bcrypt": "^5.0.2",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.7",
+    "@types/node": "^22.9.0",
+    "@types/node-cron": "^3.0.11",
     "@typescript-eslint/eslint-plugin": "^8.14.0",
     "@typescript-eslint/parser": "^8.14.0",
     "eslint": "^9.14.0",
@@ -37,6 +46,7 @@
     "nodemon": "^3.1.7",
     "prettier": "^3.3.3",
     "prettier-eslint": "^16.3.0",
+    "typescript": "^5.6.3",
     "typescript-eslint": "^8.14.0"
   }
 }
