update paths and settings

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,14 @@
 {
     "compilerOptions": {
-        "target": "es2022",
-        "module": "ES2022", // Use ES modules
-        "moduleResolution": "node", // Resolving modules in a Node-like manner
-        "esModuleInterop": true, // For compatibility with CommonJS
-        "strict": true, // Enables all strict type checking options
-        "outDir": "./dist", // Where to place the compiled files
+        "target": "ESNext",
+        "module": "ES2022",
+        "moduleResolution": "node",
+        "esModuleInterop": true,
+        "strict": true,
+        "outDir": "./public",
         "rootDir": "./src",
-        "resolveJsonModule": true, // If you need to import .json files
-        "skipLibCheck": true, // Skip checking of declaration files
+        "resolveJsonModule": true,
+        "skipLibCheck": true,
         "baseUrl": ".",
         "paths": {
             "@src/*": ["src/*"]
@@ -16,7 +16,5 @@
         "lib": ["es2020"]
     },
     "include": ["src/**/*.ts", "src/**/*.d.ts", "global.d.ts"],
-    "exclude": [
-        "node_modules" // Exclude node_modules from being compiled
-    ]
+    "exclude": ["node_modules"]
 }
