--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "type": "module",
   "scripts": {
     "build": "tsc",
-    "start": "node --es-module-specifier-resolution=node ./dist",
-    "dev": "node --loader ts-node/esm ./src/index.ts"
+    "start": "node ./public/index.js",
+    "dev": "nodemon ./public/index.js"
   },
   "keywords": [],
   "author": "",
