--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "stoxscout-server",
+  "name": "server",
   "version": "1.0.0",
   "description": "",
-  "main": "./public/index.js",
+  "main": "./src/index.js",
   "type": "module",
   "scripts": {
     "build": "cross-env NODE_ENV=production node esbuild.js",
