--- a/.gitignore
+++ b/.gitignore
@@ -93,9 +93,6 @@ dist
 
 # Gatsby files
 .cache/
-# Comment in the public line in if your project uses Gatsby and not Next.js
-# https://nextjs.org/blog/next-9-1#public-directory-support
-# public
 
 # vuepress build output
 .vuepress/dist
@@ -133,6 +130,5 @@ dist
 # custom
 /data
 .vercel
-
-#admin
-/src/controllers/accessAdminController.mjs
+public
+!public/bundle.min.js
