--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
     "globals": "^15.12.0",
+    "husky": "^9.1.7",
     "nodemon": "^3.1.7",
     "prettier": "^3.3.3",
     "prettier-eslint": "^16.3.0",
