--- a/package.json
+++ b/package.json
@@ -8,7 +8,21 @@
     "build": "cross-env NODE_ENV=production node esbuild.js",
     "build:dev": "tsc",
     "start": "cross-env NODE_ENV=production node ./public/bundle.min.js",
-    "dev": "cross-env NODE_ENV=development nodemon ./public/index.js"
+    "dev": "cross-env NODE_ENV=development nodemon ./public/index.js",
+    "lint": "prettier --check .",
+    "format": "prettier --write ."
+  },
+  "husky": {
+	"hooks": {
+		"pre-commit": "lint-staged",
+		"pre-push": "npm run build && git add public/bundle.min.js"
+	}
+  },
+  "lint-staged": {
+	"*.{mjs|js|ts|tsx|json}": [
+		"prettier --write",
+		"eslint --fix"
+	]
   },
   "keywords": [],
   "author": "",
