--- a/vercel.json
+++ b/vercel.json
@@ -5,9 +5,7 @@
             "src": "public/bundle.min.js",
             "use": "@vercel/node",
             "config": {
-                "includeFiles": [
-                    "public/**"
-                ]
+                "includeFiles": ["public/**"]
             }
         }
     ],
