--- a/package.json
+++ b/package.json
@@ -13,16 +13,16 @@
     "format": "prettier --write ."
   },
   "husky": {
-	"hooks": {
-		"pre-commit": "lint-staged",
-		"pre-push": "npm run build && git add public/bundle.min.js"
-	}
+    "hooks": {
+      "pre-commit": "lint-staged",
+      "pre-push": "npm run build && git add public/bundle.min.js"
+    }
   },
   "lint-staged": {
-	"*.{mjs|js|ts|tsx|json}": [
-		"prettier --write",
-		"eslint --fix"
-	]
+    "*.{mjs|js|ts|tsx|json}": [
+      "prettier --write",
+      "eslint --fix"
+    ]
   },
   "keywords": [],
   "author": "",
@@ -60,6 +60,7 @@
     "eslint-plugin-prettier": "^5.2.1",
     "globals": "^15.12.0",
     "husky": "^9.1.7",
+    "lint-staged": "^15.2.10",
     "nodemon": "^3.1.7",
     "prettier": "^3.3.3",
     "prettier-eslint": "^16.3.0",
