--- a/package.json
+++ b/package.json
@@ -1,70 +1,69 @@
 {
-    "name": "server",
-    "version": "1.0.0",
-    "description": "",
-    "main": "./src/index.js",
-    "type": "module",
-    "scripts": {
-        "build": "cross-env NODE_ENV=production node esbuild.js",
-        "build:dev": "tsc",
-        "start": "cross-env NODE_ENV=production node ./public/bundle.min.js",
-        "dev": "cross-env NODE_ENV=development nodemon ./public/index.js",
-        "lint": "prettier --check .",
-        "format": "prettier --write ."
-    },
-    "husky": {
-        "hooks": {
-            "pre-commit": "echo 'Running PreCommit' &&  lint-staged",
-            "pre-push": "echo 'Running PrePush' && npm run build && git add public/bundle.min.js"
-        }
-    },
-    "lint-staged": {
-        "*.{mjs|js|ts|tsx|json}": [
-            "prettier --write",
-            "eslint --fix"
-        ]
-    },
-    "keywords": [],
-    "author": "",
-    "license": "ISC",
-    "dependencies": {
-        "axios": "^1.7.7",
-        "bcrypt": "^5.1.1",
-        "body-parser": "^1.20.3",
-        "cors": "^2.8.5",
-        "cross-env": "^7.0.3",
-        "crypto": "^1.0.1",
-        "dotenv": "^16.4.5",
-        "express": "^4.21.1",
-        "express-validator": "^7.2.0",
-        "http": "^0.0.1-security",
-        "jsonwebtoken": "^9.0.2",
-        "mongoose": "^8.7.3",
-        "node-cron": "^3.0.3",
-        "tsconfig-paths": "^4.2.0",
-        "winston": "^3.17.0"
-    },
-    "devDependencies": {
-        "@eslint/js": "^9.14.0",
-        "@types/bcrypt": "^5.0.2",
-        "@types/cors": "^2.8.17",
-        "@types/express": "^4.17.21",
-        "@types/jsonwebtoken": "^9.0.7",
-        "@types/node": "^22.9.0",
-        "@types/node-cron": "^3.0.11",
-        "@typescript-eslint/eslint-plugin": "^8.14.0",
-        "@typescript-eslint/parser": "^8.14.0",
-        "esbuild": "^0.24.0",
-        "eslint": "^9.14.0",
-        "eslint-config-prettier": "^9.1.0",
-        "eslint-plugin-prettier": "^5.2.1",
-        "globals": "^15.12.0",
-        "husky": "^4.3.8",
-        "lint-staged": "^15.2.10",
-        "nodemon": "^3.1.7",
-        "prettier": "^3.3.3",
-        "prettier-eslint": "^16.3.0",
-        "typescript": "^5.6.3",
-        "typescript-eslint": "^8.14.0"
-    }
+	"name": "server",
+	"version": "1.0.0",
+	"description": "",
+	"main": "./src/index.js",
+	"type": "module",
+	"scripts": {
+		"build": "cross-env NODE_ENV=production node esbuild.js",
+		"build:dev": "tsc",
+		"start": "cross-env NODE_ENV=production node ./public/bundle.min.js",
+		"dev": "cross-env NODE_ENV=development nodemon ./public/index.js",
+		"lint": "prettier --check .",
+		"format": "prettier --write ."
+	},
+	"husky": {
+		"hooks": {
+			"pre-commit": "npm run build && git add public/bundle.min.js && lint-staged"
+		}
+	},
+	"lint-staged": {
+		"*.{mjs|js|ts|tsx|json}": [
+			"prettier --write",
+			"eslint --fix"
+		]
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"dependencies": {
+		"axios": "^1.7.7",
+		"bcrypt": "^5.1.1",
+		"body-parser": "^1.20.3",
+		"cors": "^2.8.5",
+		"cross-env": "^7.0.3",
+		"crypto": "^1.0.1",
+		"dotenv": "^16.4.5",
+		"express": "^4.21.1",
+		"express-validator": "^7.2.0",
+		"http": "^0.0.1-security",
+		"jsonwebtoken": "^9.0.2",
+		"mongoose": "^8.7.3",
+		"node-cron": "^3.0.3",
+		"tsconfig-paths": "^4.2.0",
+		"winston": "^3.17.0"
+	},
+	"devDependencies": {
+		"@eslint/js": "^9.14.0",
+		"@types/bcrypt": "^5.0.2",
+		"@types/cors": "^2.8.17",
+		"@types/express": "^4.17.21",
+		"@types/jsonwebtoken": "^9.0.7",
+		"@types/node": "^22.9.0",
+		"@types/node-cron": "^3.0.11",
+		"@typescript-eslint/eslint-plugin": "^8.14.0",
+		"@typescript-eslint/parser": "^8.14.0",
+		"esbuild": "^0.24.0",
+		"eslint": "^9.14.0",
+		"eslint-config-prettier": "^9.1.0",
+		"eslint-plugin-prettier": "^5.2.1",
+		"globals": "^15.12.0",
+		"husky": "^4.3.8",
+		"lint-staged": "^15.2.10",
+		"nodemon": "^3.1.7",
+		"prettier": "^3.3.3",
+		"prettier-eslint": "^16.3.0",
+		"typescript": "^5.6.3",
+		"typescript-eslint": "^8.14.0"
+	}
 }
