--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 		"build": "cross-env NODE_ENV=production node esbuild.js",
 		"build:dev": "tsc",
 		"start": "cross-env NODE_ENV=production node ./public/bundle.min.js",
-		"dev": "cross-env NODE_ENV=development nodemon ./public/index.js",
+		"dev": "tsc && cross-env NODE_ENV=development nodemon ./public/index.js",
 		"lint": "prettier --check .",
 		"format": "prettier --write ."
 	},
@@ -40,6 +40,7 @@
 		"jsonwebtoken": "^9.0.2",
 		"mongoose": "^8.7.3",
 		"node-cron": "^3.0.3",
+		"nodemailer": "^6.9.16",
 		"tsconfig-paths": "^4.2.0",
 		"winston": "^3.17.0"
 	},
@@ -51,6 +52,7 @@
 		"@types/jsonwebtoken": "^9.0.7",
 		"@types/node": "^22.9.0",
 		"@types/node-cron": "^3.0.11",
+		"@types/nodemailer": "^6.4.17",
 		"@typescript-eslint/eslint-plugin": "^8.14.0",
 		"@typescript-eslint/parser": "^8.14.0",
 		"esbuild": "^0.24.0",
